# AppChat

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile  Doxyfile  README.md  annotated.html  channel_8h_source.html  channels__manager_8h_source.html  classAutorisationRequest-members.html  classAutorisationRequest.html  classAutorisationRequest__coll__graph.map  classAutorisationRequest__coll__graph.md5  classAutorisationRequest__inherit__graph.map  classAutorisationRequest__inherit__graph.md5  classAutorisationResponse-members.html  classAutorisationResponse.html  classAutorisationResponse__coll__graph.map  classAutorisationResponse__coll__graph.md5  classAutorisationResponse__inherit__graph.map  classAutorisationResponse__inherit__graph.md5  classChannel-members.html  classChannel.html  classChannel__coll__graph.map  classChannel__coll__graph.md5  classChannel__inherit__graph.map  classChannel__inherit__graph.md5  classChannelsManager-members.html  classChannelsManager.html  classClient-members.html  classClient.html  classClient__coll__graph.md5  classClient__inherit__graph.md5  classConnection-members.html  classConnection.html  classConnectionManager-members.html  classConnectionManager.html  (+182 more)
.cmake/api/v1/reply/: cache-v2-61d039fbef4164228c2e.json  cmakeFiles-v1-d22c3423655ab346475c.json  codemodel-v2-77afc02c088c37a02307.json  index-2020-06-12T14-28-31-0850.json  target-client-Debug-47039dd74d4eaf414b51.json  target-server-Debug-c66580a3f3eea2b66ad6.json
build_env/: install_env.sh
cmake/: DeployQt.cmake  ProjectWarnings.cmake
doc/: AppChat.dia
lib/libbacktrace/: config.h
lib/log/: CMakeLists.txt  logger.cpp  logger.h
lib/protocol/: CMakeLists.txt  command_table.h  datetime.cpp  datetime.h  protocol.h
lib/protocol/request/: control_request.h  input_request.h  request.h  transport_request.h
lib/protocol/response/: input_response.h  response.h  transport_response.h
lib/server/: CMakeLists.txt  server.h
lib/server/channel/: channel.h
lib/server/connection/: connection.cpp
lib/server/storage/: database.cpp
lib/storage/: CMakeLists.txt  database.cpp  database.h
lib/traced_exception/: CMakeLists.txt  traced_exception.cpp
lib/traced_exception/example/: CMakeLists.txt  example.cpp  traced_exception.h
scripts/: build_pb.sh  install_env.py  install_env.sh  qt_windows_installer.qs  tests.sh
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_8.js  classes_9.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  searchdata.js
src/client/: CMakeLists.txt  client.cpp  client.h  control.cpp  control.h  images.qrc  startup_client.cpp  theme.qrc
src/client/client/: client.cpp  client.h
src/client/control/: control.cpp  control.h
src/client/gui/: channelswindow.cpp  channelswindow.h  channelswindow.ui  chatwindow.cpp  chatwindow.h  chatwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  qml.qrc
src/client/gui/resources/: AuthHeader.qml  AuthorisationWindow.qml  ChatWindow.qml  CustomButton.qml  RegistrationWindow.qml  main.qml
src/database/: database.cpp  database.h
src/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/log/: logger.cpp  logger.h
src/protocol/: CMakeLists.txt  command_table.h  datetime.h  protocol.cpp  protocol.h
src/protocol/include/protocol/: command_table.h  messages.pb.cc  messages.pb.h  messages.proto  msgfactory.cpp  msgfactory.h  protocol.h
src/protocol/include/protocol/proto/: messages.proto  request.proto  response.proto
src/protocol/include/protocol/request/: control_request.h
src/protocol/include/protocol/response/: response.h
src/protocol/request/: control_request.cpp  control_request.h  input_request.cpp  input_request.h  irequest.h  request.h  transport_request.cpp  transport_request.h
src/protocol/response/: control_response.h  input_response.h  iresponse.h  response.h  transport_response.h
src/py_tests/: server_tests.py  test_runner.py
src/server/: CMakeLists.txt  database.h  manager.h  server.h  session.h  startup_server.cpp
src/server/channel/: channel.cpp  channel.h  channels_manager.cpp  channels_manager.h  channelsmanager.cpp  channelsmanager.h  iroom.cpp  iroom.h
src/server/connection/: connection.cpp  connection.h  connection_manager.cpp  connection_manager.h  isubscriber.cpp  isubscriber.h
src/server/log/: logger.cpp  logger.h
src/server/storage/: database.cpp  database.h  databaseconfiguration.h  sqlitedatabase.cpp  sqlitedatabase.h
src/storage/: database.cpp  database.h
src/tests/: CMakeLists.txt  first_test.cpp  startup_tests.cpp  test_datetime.cpp  test_request.cpp  test_response.cpp
src/tests/protocol/: CMakeLists.txt  startup_tests.cpp  test_datetime.cpp  test_request.cpp  test_response.cpp
